--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2024"
 [dependencies]
 iced = { version = "0.13.1", features = ["debug", "tokio"] }
 sqlx = { version = "0.8", features = ["runtime-tokio", "derive", "chrono", "sqlite"] }
-tokio = "1.47.1"
+tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
 anyhow = "1.0.99"
