--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ iced = { version = "0.13.1", features = ["debug", "tokio"] }
 sqlx = { version = "0.8", features = ["runtime-tokio", "derive", "chrono", "sqlite"] }
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
 anyhow = "1.0.99"
+chrono = "0.4.42"
+dotenvy = "0.15.7"
