--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-iced = { version = "0.13.1", features = ["debug", "tokio"] }
+iced = { version = "0.13.1", features = ["debug", "tokio", "advanced"] }
 sqlx = { version = "0.8", features = ["runtime-tokio", "derive", "chrono", "sqlite"] }
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
 anyhow = "1.0.99"
